Shadow Catcher - Cuda Error in Viewport Rendering with Optix Denoiser. #93890

Closed
opened 2021-12-09 10:34:31 +01:00 by Hans Nolte · 5 comments

System Information

Win 10 - 21H2
GTX 1070 - Latest Studio Driver

Blender Version
Broken: Blender 3.1.0 - Alpha - December 09, 02:21:35 - be2213472f - zip - 236.76MB - x64

Fresh Blender from Today.
Default Scene, default Config.

Make the Cube to a Shadow Catcher.
If you Switch the Passes to None in the Optix Viewport Denoiser, Cycles crash with an Cuda Error.

Win32 Error# (1413): Ung³ltiger Index.
Illegal address in CUDA queue synchronize (film_convert_shadow_catcher filter_guiding_set_fake_albedo)

Refer to the Cycles GPU rendering documentation for possible solutions:
https://docs.blender.org/manual/en/latest/render/cycles/gpu_rendering.html

E1209 10:17:38.436954  1576 device_impl.cpp:738] Error connverting denoising passes to RGB buffer.
Illegal address in cuMemcpyDtoH_v2( (char *)mem.host_pointer + offset, (CUdeviceptr)mem.device_pointer + offset, size) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:860)
Illegal address in cuMemcpyHtoD_v2((CUdeviceptr)mem.device_pointer, mem.host_pointer, mem.memory_size()) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:775)

Refer to the Cycles GPU rendering documentation for possible solutions:
https://docs.blender.org/manual/en/latest/render/cycles/gpu_rendering.html

Illegal address in cuMemFree_v2(mem.device_pointer) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:806)
**System Information** Win 10 - 21H2 GTX 1070 - Latest Studio Driver **Blender Version** Broken: Blender 3.1.0 - Alpha - December 09, 02:21:35 - be2213472f82 - zip - 236.76MB - x64 Fresh Blender from Today. Default Scene, default Config. Make the Cube to a Shadow Catcher. If you Switch the Passes to None in the Optix Viewport Denoiser, Cycles crash with an Cuda Error. ``` Win32 Error# (1413): Ung³ltiger Index. Illegal address in CUDA queue synchronize (film_convert_shadow_catcher filter_guiding_set_fake_albedo) Refer to the Cycles GPU rendering documentation for possible solutions: https://docs.blender.org/manual/en/latest/render/cycles/gpu_rendering.html E1209 10:17:38.436954 1576 device_impl.cpp:738] Error connverting denoising passes to RGB buffer. Illegal address in cuMemcpyDtoH_v2( (char *)mem.host_pointer + offset, (CUdeviceptr)mem.device_pointer + offset, size) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:860) Illegal address in cuMemcpyHtoD_v2((CUdeviceptr)mem.device_pointer, mem.host_pointer, mem.memory_size()) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:775) Refer to the Cycles GPU rendering documentation for possible solutions: https://docs.blender.org/manual/en/latest/render/cycles/gpu_rendering.html Illegal address in cuMemFree_v2(mem.device_pointer) (C:\Users\blender\git\blender-vdev\blender.git\intern\cycles\device\cuda\device_impl.cpp:806) ```
Author

Added subscriber: @ditos

Added subscriber: @ditos
Hans Nolte changed title from Cuda Error in Viewport Rendering with Optix Denoiser. to Shadow Catcher - Cuda Error in Viewport Rendering with Optix Denoiser. 2021-12-09 11:16:09 +01:00

This issue was referenced by blender/cycles@3546ac09c7

This issue was referenced by blender/cycles@3546ac09c7013a3d787198f7919b3168d0e0f8f3

This issue was referenced by e83df74008

This issue was referenced by e83df74008b0a99e8888b931dd3e21167071c14e

This issue was referenced by 4b00a779ec

This issue was referenced by 4b00a779ecf8173c476e3c9356576d56098da62d

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-12-09 18:29:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93890
No description provided.