Fix T93890: Cycles error with shadow catcher + OptiX denoise without passes